# CopyTranslator

./: CHANGELOG.md  README.md  README_zh.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vue.config.js
.github/workflows/: linux-build.yml  release.yml
docs/: TRANSLATION_IMPLEMENTATION.md
docs/about/: acknowledge.md
docs/changelogs/: README.md  v13.md  v8.md  v9.md
docs/guide/: 10.0.0.md  10.2.4.md  11.0.0.md  12.0.0.md  12.1.0.md  13.0.0.md  8.3.0.md  8.4.0.md  9.0.0.md  README.md
docs/support/: README.md  contributing.md
public/: index.html  preload.js  runtime-globals.js
scripts/: dev-server.mjs  package-archlinux.mjs  set-release-version.mjs
src/: App.vue  background.ts  main.ts  tauri-compat.d.ts  vendor.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/common/: action.ts  configParser.ts  configuration.ts  constant.ts  controller.ts  env.ts  event-bus.ts  locales.ts  logger.ts  rule.ts  shortcuts.ts  types.ts
src/components/: Action.vue  ActionButton.vue  ActionButtonConfig.vue  BaseView.vue  CoTextArea.vue  ContrastPanel.vue  CustomTranslatorManager.vue  DictResult.vue  DiffTextArea.vue  EngineButton.vue  Focus.vue  KeyConfig.vue  MultiSelect.vue  SimpleButton.vue  Tips.vue  TranslatorGroupConfig.vue  useBase.ts  useBaseView.ts  useWindowResize.ts
src/main/: clipboard.ts  controller.ts  event-listener.ts  focus-handler.ts  menu-manager.ts  ocr.ts  prompt.ts  proxy-helper.ts  shortcut.ts  simulate.ts  tracker.ts  translate-controller.ts
src/renderer/: comparator.ts  controller.ts  createApp.ts
src/router/: index.ts
src/store/: index.ts
src/tauri/: clipboard.ts  open-url.ts  translate-controller.ts
src/views/: About.vue  BlackWhiteConfig.vue  Config.vue  Contrast.vue  NetworkProxy.vue  OcrConfig.vue  Options.vue  Settings.vue  ShortcutSettings.vue  Switches.vue  TranslatorManager.vue
(+28 files in other folders)
