[package]
name = "copytranslator"
version = "12.1.0"
description = "CopyTranslator desktop application"
authors = ["CopyTranslator"]
license = "GPL-2.0-or-later"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
arboard = "3.4.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
image = "0.25"
