[package]
name = "copytranslator"
version = "13.0.0"
description = "CopyTranslator desktop application"
authors = ["CopyTranslator"]
license = "GPL-2.0-or-later"
repository = "https://github.com/wang-borong/CopyTranslator"
edition = "2021"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.33"
tauri = { version = "2.11.5", features = ["tray-icon", "devtools", "macos-private-api"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-global-shortcut = "2.3.2"
arboard = "3.6.1"
reqwest = { version = "0.13.4", features = ["json", "form"] }
tokio = { version = "1.52.3", features = ["full"] }
base64 = "0.22.1"
image = "0.25.10"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
